fix header overlap

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 header{
     background-color: #41b0bf;
-    height: 30vw;
+    height: 60vh;
 }
 a{
     text-decoration: none;
